--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "lint": "eslint . --ext .tsx --ext=ts"
+    "lint": "eslint . --ext .tsx --ext=ts",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
@@ -36,6 +39,11 @@
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vitest": "^0.29.2"
+    "vitest": "^0.29.2",
+    "husky": "^8.0.0"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,html,css}": "prettier --write",
+    "src/**/*.{ts,tsx}": "eslint --fix"
   }
 }
