--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "lint": "eslint . --ext .tsx --ext=ts",
+    "lint": "eslint . --ext .tsx --ext=ts --fix",
     "prepare": "husky install"
   },
   "dependencies": {
