--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest  run --coverage",
-    "vitest": "vitest", 
+    "vitest": "vitest",
     "lint": "eslint . --ext .tsx --ext=ts --fix",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "@types/react-redux": "^7.1.25",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
