--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
     "test": "vitest  run --coverage",
     "vitest": "vitest",
     "lint": "eslint . --ext .tsx --ext=ts --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "ssr": "ts-node --esm server.ts"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
+    "express": "^4.18.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/express": "^4.17.17",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
@@ -51,6 +55,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,html,css}": "prettier --write",
-    "src/**/*.{ts,tsx}": "eslint --fix"
+    "src/**/*.{ts,tsx}": "eslint --fix",
+    "*.{ts,tsx}": "eslint --fix"
   }
 }
