feat: tests cypress added config

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "vitest": "vitest",
     "lint": "eslint . --ext .tsx --ext=ts --fix",
     "prepare": "husky install",
-    "ssr": "ts-node --esm server.ts"
+    "start": "ts-node server.ts",
+    "cypr": "cypress open --e2e --browser chrome",
+    "cypr:e2e": "start-server-and-test start http://localhost:3000 cypr"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -37,10 +39,12 @@
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.3",
+    "cypress": "^12.10.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-cypress": "^2.13.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -49,6 +53,7 @@
     "husky": "^8.0.0",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.4",
+    "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
