--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "lint": "eslint . --ext .tsx --ext=ts --fix",
     "prepare": "husky install",
     "start": "ts-node server.ts",
+    "cypr:run": "cypress run",
     "cypr": "cypress open --e2e --browser chrome",
-    "cypr:e2e": "start-server-and-test start http://localhost:3000 cypr"
+    "cypr:open": "start-server-and-test start http://localhost:3000 cypr",
+    "runserv": "start-server-and-test start http://localhost:3000 cypr:run",
+    "cypr:clean": "npx rimraf coverage && npx rimraf .nyc_output",
+    "cypr:report": "npx nyc report --reporter=text && npm run cypr:clean",
+    "coverage": "npm run runserv && npm run cypr:report"
   },
   "dependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
     "express": "^4.18.2",
@@ -29,9 +35,11 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/cypress__code-coverage": "^3.10.0",
     "@types/express": "^4.17.17",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -39,6 +47,7 @@
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.3",
+    "babel-plugin-istanbul": "^6.1.1",
     "cypress": "^12.10.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -52,10 +61,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "jsdom": "^21.1.1",
+    "nyc": "^15.1.0",
     "prettier": "^2.8.4",
+    "rimraf": "^5.0.0",
     "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-istanbul": "^4.0.1",
     "vitest": "^0.29.2"
   },
   "lint-staged": {
