feat: tests cypress added without coverage1

--- a/package.json
+++ b/package.json
@@ -11,22 +11,37 @@
     "vitest": "vitest",
     "lint": "eslint . --ext .tsx --ext=ts --fix",
     "prepare": "husky install",
-    "ssr": "ts-node --esm server.ts"
+    "start": "ts-node --esm server.ts",
+    "cypr:run": "cypress run",
+    "cypr": "cypress open --e2e --browser chrome",
+    "cypr:open": "start-server-and-test start http://localhost:3000 cypr",
+    "runserv": "start-server-and-test start http://localhost:3000 cypr:run",
+    "cypr:clean": "npx rimraf coverage && npx rimraf .nyc_output",
+    "cypr:report": "npx nyc report --reporter=text && npm run cypr:clean",
+    "coverage": "npm run runserv && npm run cypr:report"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-cypress": "^2.13.3",
     "express": "^4.18.2",
     "husky": "^8.0.3",
+    "i": "^0.3.7",
     "lint-staged": "^13.2.0",
+    "npm": "^9.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "rimraf": "^5.0.0",
+    "ts-import-plugin": "^3.0.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -37,11 +52,12 @@
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.3",
+    "cypress": "^12.11.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
@@ -49,8 +65,10 @@
     "husky": "^8.0.0",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.4",
+    "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-istanbul": "^4.0.1",
     "vitest": "^0.29.2"
   },
   "lint-staged": {
