--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "./src/**/*",
     ".eslintrc.cjs",
     "vite.config.ts",
-    "src", "server.ts"],
+    "src", "server.ts","cypress.config.ts", "**/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
